# MCP_Crash_Course_for_Python_Developers

./: .gitignore  README.md  pyproject.toml
1_Introduction_and_Context_to_MCP/: introduction_to_MCP.md
2_Understanding_the_use_of_MCP/: understanding_MCP.md
3_simple_server_setup/: client_sse.py  client_stdio.py  client_streamable_http.py  server.py  server_with_python_sdk.md
4_Integrating_OpenAI_with_MCP/: client.py  client_simple.py  openai_with_mcp.md  server.py
4_Integrating_OpenAI_with_MCP/data/: dataset_western_union.json  kb.json
5_MCP_vs_FunctionCalling/: function_calling.py  mcp_vs_function-calling.md  tools.py
config/: settings.py
