[project]
name = "project-with-mcp"
version = "0.1.0"
description = "Neste repositório vamos aprofundar no conceito e aplicação do MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "mcp[cli]>=1.12.0",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
